--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -15,8 +15,7 @@
         android:id="@+id/actionBarLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="35dp"
-        android:background="@color/colorPrimary">
+        android:layout_marginTop="35dp">
 
         <EditText
             android:id="@+id/searchPlaceEdit"
