--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -16,6 +16,10 @@
             layout="@layout/now" />
 
         <include
+            android:id="@id/hourlyLayout"
+            layout="@layout/hourly" />
+
+        <include
             android:id="@+id/forecastLayout"
             layout="@layout/forecast" />
 
