--- a/app/src/main/res/layout/forecast.xml
+++ b/app/src/main/res/layout/forecast.xml
@@ -18,10 +18,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
             android:text="预报"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="20sp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@android:color/darker_gray"/>
 
         <LinearLayout
             android:id="@+id/forecastLayout"
