--- a/app/src/main/res/layout/life_index.xml
+++ b/app/src/main/res/layout/life_index.xml
@@ -20,6 +20,13 @@
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="20sp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@android:color/darker_gray"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
