--- a/app/src/main/res/layout/life_index.xml
+++ b/app/src/main/res/layout/life_index.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/cardBgColor"
     android:layout_margin="15dp"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:text="生活指数"
+            android:text="@string/living_index"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="20sp" />
 
@@ -56,7 +57,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="感冒"
+                        android:text="@string/influenza"
                         android:textSize="12sp" />
 
                     <TextView
@@ -94,7 +95,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="穿衣"
+                        android:text="@string/feel_the_temperature"
                         android:textSize="12sp" />
 
                     <TextView
@@ -137,7 +138,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="实时紫外线"
+                        android:text="@string/real_time_uv_light"
                         android:textSize="12sp" />
 
                     <TextView
@@ -174,7 +175,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="洗车"
+                        android:text="@string/car_wash"
                         android:textSize="12sp" />
 
                     <TextView
